--- a/samples/sgm_example/CmakeLists.txt
+++ b/samples/sgm_example/CmakeLists.txt
@@ -11,8 +11,6 @@ LINK_DIRECTORIES(
  ${TOTAL_LIB_PATH}
  ${LibS_OUT_DIR}
 )
- 
- Message(status ${LibS_OUT_DIR})
 
 ADD_EXECUTABLE(${OUT_NAME} ${SOURCE_LIST})
 
@@ -20,7 +18,7 @@ TARGET_LINK_LIBRARIES(${OUT_NAME}
  ${OpenCV_LIBS}
 )
 
-SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	samples)
+SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	Application)
 set_target_properties(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
 INSTALL(TARGETS ${OUT_NAME} RUNTIME DESTINATION bin)
