--- a/src/sgm/CmakeLists.txt
+++ b/src/sgm/CmakeLists.txt
@@ -17,7 +17,7 @@ TARGET_LINK_LIBRARIES(${OUT_NAME}
  ${OpenCV_LIBS}
 )
 
-SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	G3DModules)
+SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	Library/Algorithm)
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
 INSTALL(TARGETS ${OUT_NAME} RUNTIME DESTINATION bin)
