2020-12-18 添加Log模块，添加单元测试

--- a/samples/sgm_example/CmakeLists.txt
+++ b/samples/sgm_example/CmakeLists.txt
@@ -2,6 +2,8 @@ SET(OUT_NAME SGMApp)
 AUX_SOURCE_DIRECTORY(. SOURCE_LIST)
 ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX)
 
+find_package(OpenCV REQUIRED)
+
 INCLUDE_DIRECTORIES(
  ${OpenCV_INCLUDE_DIRS}
  ${CVL_INCLUDE_DIR}
