--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -18,6 +18,8 @@ endif()
 SET(CVL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src)
 
 SET(BUILD_SHARED_LIBS ON)
+SET(BUILD_SAMPLES ON)
+SET(BUILD_UNIT_TESTS ON)
 SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install CACHE STRING "install" FORCE)
 
 set(CMAKE_DEBUG_POSTFIX "d")
@@ -31,7 +33,14 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/build/lib)
 set(CVL_LIB_OUT_DIR ${PROJECT_SOURCE_DIR}/build/lib)
 
 add_subdirectory(src)
-add_subdirectory(samples)
+
+IF(BUILD_SAMPLES)
+    add_subdirectory(samples)
+ENDIF()
+
+IF(BUILD_UNIT_TESTS)
+    add_subdirectory(unit_test)
+ENDIF()
 
 include(cmake/init_prj_depend.cmake)
 include(cmake/install_include_files.cmake)
