2020-12-19 添加 time 模块，完善Log/IO模块，并添加单元测试

--- a/src/io/CmakeLists.txt
+++ b/src/io/CmakeLists.txt
@@ -1,6 +1,6 @@
 SET(OUT_NAME CVLIOLib)
 AUX_SOURCE_DIRECTORY(. SOURCE_LIST)
-ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX -DCVL_IO_Lib_EXPORTS)
+ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX -DCVL_IO_LIB_EXPORTS)
 
 find_package(OpenCV REQUIRED)
 
