--- a/src/time/CmakeLists.txt
+++ b/src/time/CmakeLists.txt
@@ -1,18 +1,10 @@
-SET(OUT_NAME CVLLogLib)
+SET(OUT_NAME CVLTimeLib)
 AUX_SOURCE_DIRECTORY(. SOURCE_LIST)
-ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX -DCVL_LOG_LIB_EXPORTS)
+ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX -DCVL_TIME_LIB_EXPORTS)
 
-INCLUDE_DIRECTORIES(
- ${CVL_INCLUDE_DIR}
-)
+ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} 
+            time.h)
 
-LINK_DIRECTORIES(
- ${CVL_LIB_OUT_DIR}
-)
-
-ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST}
-            log.h)
-		
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	Library/Common)
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
