2020-12-19 sgm 部分匹配代码编写

--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -1,4 +1,18 @@
 
+FIND_PACKAGE( OpenMP REQUIRED)
+if(OPENMP_FOUND)
+    message(STATUS "OPENMP FOUND")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS"${CMAKE_EXE_LINKER_FLAGS}${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
+SET(EIGEN_INCLUDE_DIR "EIGEN_INCLUDE_DIR-NO-FOUND" CACHE PATH "eigen include directory")
+if(${EIGEN_INCLUDE_DIR} STREQUAL "EIGEN_INCLUDE_DIR-NO-FOUND")
+    message(FATAL_ERROR "FATAL: EIGEN_INCLUDE_DIR-NO-FOUND")
+endif()
+LIST(APPEND CVL_INCLUDE_DIR ${EIGEN_INCLUDE_DIR})
+
 # Common
 add_subdirectory(base)
 add_subdirectory(io)
