--- a/src/io/CmakeLists.txt
+++ b/src/io/CmakeLists.txt
@@ -13,8 +13,8 @@ LINK_DIRECTORIES(
  ${CVL_LIB_OUT_DIR}
 )
 
-ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} 
-            image_io.h mesh_io.h)
+FILE(GLOB_RECURSE h_files ./*.h ./*.inl)
+ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} ${h_files})
 
 TARGET_LINK_LIBRARIES(${OUT_NAME} 
  ${OpenCV_LIBS}
@@ -25,3 +25,4 @@ SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
 INSTALL(TARGETS ${OUT_NAME} RUNTIME DESTINATION bin)
 INSTALL(TARGETS ${OUT_NAME} ARCHIVE DESTINATION lib)
+INSTALL(FILES ${h_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/io)
