--- a/src/time/CmakeLists.txt
+++ b/src/time/CmakeLists.txt
@@ -2,11 +2,12 @@ SET(OUT_NAME CVLTimeLib)
 AUX_SOURCE_DIRECTORY(. SOURCE_LIST)
 ADD_DEFINITIONS(${NORMAL_DEFINITION} -DNOMINMAX -DCVL_TIME_LIB_EXPORTS)
 
-ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} 
-            time.h)
+FILE(GLOB_RECURSE h_files ./*.h ./*.inl)
+ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} ${h_files})
 
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	Library/Common)
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
 INSTALL(TARGETS ${OUT_NAME} RUNTIME DESTINATION bin)
 INSTALL(TARGETS ${OUT_NAME} ARCHIVE DESTINATION lib)
+INSTALL(FILES ${h_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/time)
