--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -15,12 +15,12 @@ if(POLICY CMP0079)
   cmake_policy(SET CMP0079 NEW)
 endif()
 
-SET(CVL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src)
+option(BUILD_SHARED_LIBS "Build Shared Lib" ON)
+option(BUILD_SAMPLES "Build Sample Apps" ON)
+option(BUILD_UNIT_TESTS "Unit Test" ON)
 
-SET(BUILD_SHARED_LIBS ON)
-SET(BUILD_SAMPLES ON)
-SET(BUILD_UNIT_TESTS ON)
 SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install CACHE STRING "install" FORCE)
+SET(CMAKE_CONFIGURATION_TYPES Debug;Release CACHE STRING "make Build Type" FORCE)
 
 set(CMAKE_DEBUG_POSTFIX "d")
 
@@ -30,6 +30,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/build/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/build/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/build/lib)
 
+SET(CVL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src)
 set(CVL_LIB_OUT_DIR ${PROJECT_SOURCE_DIR}/build/lib)
 
 add_subdirectory(src)
@@ -43,4 +44,3 @@ IF(BUILD_UNIT_TESTS)
 ENDIF()
 
 include(cmake/init_prj_depend.cmake)
-include(cmake/install_include_files.cmake)
