--- a/src/wrap/CmakeLists.txt
+++ b/src/wrap/CmakeLists.txt
@@ -10,11 +10,12 @@ LINK_DIRECTORIES(
  ${CVL_LIB_OUT_DIR}
 )
 
-ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} 
-            image_wrap.h)
+FILE(GLOB_RECURSE h_files ./*.h ./*.inl)
+ADD_LIBRARY(${OUT_NAME} SHARED ${SOURCE_LIST} ${h_files})
 
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES FOLDER	Library/Algorithm)
 SET_TARGET_PROPERTIES(${OUT_NAME} PROPERTIES DEBUG_POSTFIX "d")
 
 INSTALL(TARGETS ${OUT_NAME} RUNTIME DESTINATION bin)
 INSTALL(TARGETS ${OUT_NAME} ARCHIVE DESTINATION lib)
+INSTALL(FILES ${h_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/wrap)
